--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Social networks and messengers: 
   <br>
-  <a href="https://t.me/anutadadavai">telegram</a>
+  <a href="https://t.me/olithiumsunset">telegram</a>
   <br>
   <a href="https://vk.com/forodie">vk</a>
   
