--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>
   Lobachevsky University, ITMM
   <br><br>
-  Social networks and messengers: 
+  messengers: 
   <br>
   <a href="https://t.me/olithiumsunset">telegram</a>
-  <br>
-  <a href="https://vk.com/forodie">vk</a>
+#  <br>
+#  <a href="https://vk.com/forodie">vk</a>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
