--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: forodie # your name (or website title) here
-logo: "/images/logo.png?raw=true"  # your photo (or logo) here
+title: German Utkin # your name (or website title) here
+logo: "/images/logo1.png?raw=true"  # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
-  German Utkin
+  Laboratory Assistant 
   <br>
   Lobachevsky University, ITMM
   <br><br>
