--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,10 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>
   Lobachevsky University, ITMM
   <br><br>
-  messengers: 
+  about: 
   <br>
-  <a href="https://t.me/olithiumsunset">telegram</a>
+  <a href="https://t.me/olithiumsunset">telegram</a> - for zoomers
+  <a href="mailto:german.utkingu@gmail.com>gmail>gmail</a> - for boomers
 #  <br>
 #  <a href="https://vk.com/forodie">vk</a>
   
