--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   about: 
   <br>
   <a href="https://t.me/olithiumsunset">telegram</a> - for zoomers
-  <a href="mailto:german.utkingu@gmail.com>gmail>gmail</a> - for boomers
+  <a href="mailto:german.utkingu@gmail.com>gmail</a> - for boomers
 #  <br>
 #  <a href="https://vk.com/forodie">vk</a>
   
